   loginfailed at all, so assume 3-arg loginfailed if not declared.
 - (dtucker) [port-aix.h] Work around name collision on AIX for r_type by
   undef'ing it.
 - (dtucker) Bug #543: [configure.ac port-aix.c port-aix.h]
   Call setauthdb() before loginfailed(), which may load password registry-
   specific functions.  Based on patch by cawlfiel@us.ibm.com.
 - (dtucker) [port-aix.h] Fix prototypes.

20030708
 - (dtucker) [acconfig.h auth-passwd.c configure.ac session.c port-aix.[ch]]
   Include AIX headers for authentication functions and make calls match
   prototypes.  Test for and handle 3-arg and 4-arg variants of loginfailed.
 - (dtucker) [session.c] Check return value of setpcred().
 - (dtucker) [auth-passwd.c auth.c session.c sshd.c port-aix.c port-aix.h]
   Convert aixloginmsg into platform-independant Buffer loginmsg.

20030707
 - (dtucker) [configure.ac] Bug #600: Check that getrusage is declared before
   searching libraries for it.  Fixes build errors on NCR MP-RAS.

20030706
 - (dtucker) [ssh-rand-helper.c loginrec.c]
   Apply atomicio typing change to these too.

20030703
 - (dtucker) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2003/06/28 07:48:10
     [sshd.c]
     report pidfile creation errors, based on patch from Roumen Petrov;
     ok markus@
   - deraadt@cvs.openbsd.org 2003/06/28 16:23:06
     [atomicio.c atomicio.h authfd.c clientloop.c monitor_wrap.c msg.c
     progressmeter.c scp.c sftp-client.c ssh-keyscan.c ssh.h sshconnect.c
     sshd.c]
     deal with typing of write vs read in atomicio
   - markus@cvs.openbsd.org 2003/06/29 12:44:38
     [sshconnect.c]
     memset 0, not \0; andrushock@korovino.net
   - markus@cvs.openbsd.org 2003/07/02 12:56:34
     [channels.c]
     deny dynamic forwarding with -R for v1, too; ok djm@
   - markus@cvs.openbsd.org 2003/07/02 14:51:16
     [channels.c ssh.1 ssh_config.5]
     (re)add socks5 suppport to -D; ok djm@
     now ssh(1) can act both as a socks 4 and socks 5 server and